src/k8s/apps/isp-monitoring/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: isp-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
