src/k8s/apps/isp-monitoring/smokeping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smokeping
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: smokeping
  template:
    metadata:
      labels:
        app.kubernetes.io/name: smokeping
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
        - name: smokeping
          image: lscr.io/linuxserver/smokeping:2.9.0-r0-ls184
          securityContext:
            capabilities:
              add:
                - NET_RAW
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
          readinessProbe:
            tcpSocket:
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 192Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: smokeping-data
        - name: config
          emptyDir: {}
        - name: probes
          configMap:
            name: smokeping-config
---
apiVersion: v1
kind: Service
metadata:
  name: smokeping
spec:
  selector:
    app.kubernetes.io/name: smokeping
  ports:
    - name: http
      port: 80
      targetPort: http
